# glsl_cellular_automaton_linux

./: .gitignore  CMakeLists.txt  README.md  compile.sh  glad.c  main  main.cpp
GLSL_files/: agent.glsl  diffuseAndFade.glsl  fs.glsl  vs.glsl
glad/: glad.c  glad.h
headers/: IBO.cpp  IBO.h  SSBO.cpp  SSBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  VBO_layout.cpp  VBO_layout.h  computeShaderClass.cpp  computeShaderClass.h  debugging.h  renderer.cpp  renderer.h  shaderClass.cpp  shaderClass.h  texture.cpp  texture.h
